style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

*:focus {
  outline: none;
}

header {
  height: 140vh;
}

body {
  height: 360vh;
  background-color: #fff;
  font-family: "Quicksand", sans-serif;
  overflow-x: hidden;
}

div.hamburger {
  display: none;
}

.banner nav {
  position: fixed;
  display: flex;
  width: 100%;
  height: 8vh;
  background-color: rgba(1, 1, 1, 0.8);
  overflow-y: hidden;
  padding: 1%;
  margin-top: 2%;
  transition: 0.2s linear;
}

.banner nav.active {
  position: fixed;
  height: 4vh;
  background-color: rgba(1, 1, 1, 0.85);
  z-index: 999;
  padding: 0;
  margin-top: 0;
  transition: 0.2s linear;
}

.banner aside {
  flex-basis: 30%;
  background-image: url("img/jmLOGO.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  /* opacity: 0.8; */
  border-right: 1px solid #ddd;
  /* border-right: 1.5px solid #ddd; wybrac lepszy */
  height: 100%;
  margin-left: 20%;
}

.banner aside.active {
  height: 100%;
  background-size: 60%;
  padding: 0;
}

.banner nav ul {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 80%;
  height: 100%;
}

.banner nav ul li {
  position: relative;
  margin-left: 2%;
  width: 15%;
  list-style: none;
  height: 100%;
  cursor: pointer;
}

.banner nav ul li.mobileHamburger {
  display: none;
}

.banner nav ul li a {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 1rem;
  text-decoration: none;
  color: #fff;
  transition: 0.1s linear;
}

.banner nav ul li:hover a {
  color: #6dd7f7;
  font-weight: 400;
  /* border-bottom: 0.2px solid #6dd7f7; */
  /* padding-bottom: 2%; */
  /* top: 25%; */
}

.banner nav.mobileHamburgerActive {
  display: none;
}

/* WHAT LOGO SHOCK + KAFELKI */

.what {
  display: flex;
  flex-direction: column;
  height: calc(140vh - 10vh);
  transition: 2s;
}

.what.opa {
  opacity: 0;
  transition: 2s;
}

.whatyouwant {
  flex-basis: 40%;
  position: relative;
  margin-top: 15%;
  margin-bottom: 5%;
  font-size: 2rem;
  text-align: center;
}

.whatyouwant img {
  position: absolute;
  top: 30%;
  left: 50%;
  transform: translateX(-50%);
  width: 30%;
  height: auto;
  animation: logomove 4s linear infinite;
}

.familycompany {
  display: block;
  font-weight: 400;
  margin: 2%;
  margin-left: -35%;
  width: 100%;
  padding-left: 1%;
  border-left: 1px solid #111;
  transition: 1s;
  font-size: 1.8rem;
  text-transform: uppercase;
}

.familycompany span {
  font-weight: 500;
}

.familycompany.active {
  margin-left: 7.5%;
  padding-left: 1%;
}

.whatwedowrapper {
  flex-basis: 30%;
  width: 100%;
  position: relative;
  overflow: hidden;
}

.whatwedo {
  margin: 0 5%;
  position: absolute;
  top: -100%;
  opacity: 0;
}

.whatwedo.active {
  display: flex;
  top: 0;
  left: 0;
  justify-content: space-around;
  opacity: 1;
  transition: 1s ease;
}

.whatwedo.opa {
  opacity: 0.4;
}

.whatwedo div {
  /* background-color: #12aedd; */
  background-color: #f7f7f7;
  /* opacity: 0.7; */
  flex-basis: 28%;
  height: 100%;
  padding: 2%;
  text-align: center;
}

.whatwedo div h1 {
  height: 20%;
  color: #111;
  text-align: center;
  font-weight: 500;
  padding-bottom: 5%;
}

.whatwedo div i {
  display: block;
  font-size: 3rem;
  color: #111;
}

.whatwedo div p {
  padding-top: 10%;
  color: #111;
  font-size: 1rem;
  text-align: center;
}

/* WHAT WE DO */
body {
  --leftLogomove: 48%;
  --leftLogomoveStandard: 50%;
}

button.send {
  display: none;
}

/* BGC */
.bgc {
  height: 60vh;
  background-image: url("img/banner7.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;
  font-family: "Quicksand", sans-serif;
  /* filter: grayscale(2); */
}

button.check {
  display: none;
}

/*OFFER*/

div.offerheader {
  position: relative;
  overflow-x: hidden;
}

main div.offerheader h1 {
  position: relative;
  text-transform: uppercase;
  font-weight: 400;
  text-align: center;
  margin-top: 5%;
  margin-bottom: 4%;
  font-size: 2.4rem;
}

main div.offerheader h1 span {
  font-weight: 500;
}

main div.offerheader::after {
  position: absolute;
  top: 38%;
  left: 7%;
  content: "";
  height: 10vh;
  width: 100vw;
  background-color: #fff;
  animation: offermove 10s linear infinite;
}

main div.offer {
  height: 150vh;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: flex-start;
  /* margin: 2% 10%; */
  /* margin-top: 10%; */
  padding: 0 10%;
  overflow: hidden;
}

main div.offer div {
  width: 60%;
}

main div.offer div:nth-of-type(even) {
  text-align: left;
  align-self: flex-end;
}

main div.offer h1 {
  font-weight: 400;
  padding: 5% 0;
}

k main div.offer i {
  height: 2%;
  width: 2%;
  padding-right: 4%;
}

main div.offer div {
  transition: 2s;
}

main div.offer div:nth-child(odd) {
  transform: translate(-150%);
}

main div.offer div:nth-child(even) {
  transform: translate(150%);
}

main div.offer div.active:nth-child(odd) {
  transform: translate(0%);
}

main div.offer div.active:nth-child(even) {
  transform: translate(0%);
}

/* BGC */
.bgc.second {
  background-image: url("img/banner4.jpg");
  margin: 10% auto;
  filter: grayscale(0.9);
}

/* REALIZATIONS */
div.realizations {
  height: 110vh;
}

div.realizations h1 {
  font-weight: 400;
  font-size: 2.4rem;
  text-transform: uppercase;
  text-align: center;
  margin-bottom: 2%;
}

div.imgRealizations {
  height: 60vh;
  width: 60vw;
  background-color: transparent;
  margin: 5% auto 5%;
  background-image: url(./img/realizations/1.jpg);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

div.imgDescription {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 60%;
  margin: 0 auto;
}

div.desc {
  flex-basis: 45%;
}

div.left,
div.right {
  flex-basis: 40%;
  text-align: center;
}

div.desc.active {
  flex-basis: 70%;
  align-items: center;
}
/* ... */

